Fixed the large gap between header logo and links

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body{
 .section-one .header-logo{
     color: #f9faf8;
     font-size: 24px;
-    margin-right: 400px;
 }
 
 .header-links{
